# periodic-prompter

./: CLAUDE.md  LICENSE  Periodic Prompter.app  README.md  app_main.py  build_app.py  pyproject.toml  setup.py  setup_simple.py
.claude/: settings.local.json
src/periodic_prompter/: __init__.py  main.py  main_rumps.py  notifications.py  scheduler.py  settings.py  settings_gui.py  storage.py
