[tool.poetry]
name = "periodic-prompter"
version = "0.1.0"
description = "A macOS tool to periodically ask you what you're working on"
authors = ["User"]
readme = "README.md"
packages = [{include = "periodic_prompter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
plyer = "^2.1.0"
schedule = "^1.2.2"
pystray = ">=0.19.5"
pyobjc-framework-cocoa = ">=10.0"
pyobjc-core = ">=10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
py2app = "^0.28.8"

[tool.poetry.scripts]
periodic-prompter = "periodic_prompter.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"